--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stressfuldev-2025",
   "type": "module",
   "version": "0.0.1",
+  "license": "MIT",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -9,6 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.2"
+    "@tailwindcss/vite": "^4.1.4",
+    "astro": "^5.7.2",
+    "tailwindcss": "^4.1.4",
+    "three": "^0.175.0"
+  },
+  "devDependencies": {
+    "@types/three": "^0.175.0"
   }
 }
